samples/_failures_safe/1761407422_db6075_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a05e323b.c: In function ‘main’:
./samples/SAFE/__tmp_a05e323b.c:145:13: error: expected declaration or statement at end of input
  145 |             print_matrix(&mat1, "A");
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_a05e323b.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a05e323b.c:145:13: error: expected declaration or statement at end of input
